[package]
name = "versus-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argh = "0.1.10"
ethers = { version="2.0.3", features = ["ws"] }
futures = "0.3.28"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
