[package]
name = "versus-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
ethers = { version="2.0.10", features = ["ws"] }
futures = "0.3.29"
serde = "1.0.190"
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
